--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <h1>Dog 1</h1>
 <h2>Dog 2</h2>
-<h3>Dog 3</h3>
-<h4>Dog 4</h4>
-<h5>Dog 5</h5>
-<h6>Dog 6</h6>
+<b>Dog 3</b>
+<i>this is my italicized sentence</i>
+<p>This is my paragraph about Corgi's. Vincent has a Corgi I think. That's cool.</p>
+
 
 <body>
 Hello world
