--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <b>Dog 3</b>
 <i>this is my italicized sentence</i>
 <p>This is my paragraph about Corgi's. Vincent has a Corgi I think. That's cool.</p>
-
+<img src="https://img.buzzfeed.com/buzzfeed-static/static/2014-01/enhanced/webdr02/10/10/enhanced-buzz-orig-6431-1389367682-10.jpg?downsize=700:*&output-format=auto&output-quality=auto"></img>
 
 <body>
 Hello world
