--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <h1>
   <b>Dog 3</b>
+  Dog 2
 </h1>
 <body>
   <i>this is my italicized sentence</i>
@@ -8,6 +9,5 @@
   <img src="https://img.buzzfeed.com/buzzfeed-static/static/2014-01/enhanced/webdr02/10/10/enhanced-buzz-orig-6431-1389367682-10.jpg?downsize=700:*&output-format=auto&output-quality=auto"></img>
 
 
-  Hello world
-  I am learning to code at Holberton right now
+  <p>I am learning to code at Holberton right now</p>
 </body>
