--- a/index.html
+++ b/index.html
@@ -11,3 +11,14 @@
   </ul>
 
 </body>
+
+<h2>
+  Dog Type List
+</h2>
+<body>
+  <ol>
+    <li><a target="blank_" href="https://en.wikipedia.org/wiki/German_Shepherd">German Shepherd</a></li>
+    <li><a target="blank_" href="https://en.wikipedia.org/wiki/Golden_Retriever">Golden Retriever</a></li>
+    <li><a target="blank_" href="https://en.wikipedia.org/wiki/Pembroke_Welsh_Corgi">Corgi</a></li>
+  </ol>
+</body>
