--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
   </ol>
 </body>
 
-<svg width="400" height="110">
-  <rect width="300" height="100" style="fill:rgb(255,0,0);stroke-width:3;stroke:rgb(0,0,0)" />
-</svg>
+.rectangle{
+  position:absolute;
+  top:100px;
+  left:13px;
+    height:40px;
+    width: 200px;
+    background-color: #FF0000
+}
