--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-
+<html>
+<head>
 <style>
-<body>
 .rectangle{
   position:absolute;
   top:100px;
@@ -10,5 +10,4 @@
     width: 200px;
     background-color: #FF0000
 }
-</body>
 </style>
