--- a/index.html
+++ b/index.html
@@ -12,4 +12,11 @@
 }
 </style>
 </head>
+
+<body>
+  <div class="square"></div>
+  <div class="rectangle"></div>
+  <div class="square2"></div>
+</body>
+
 </html>
