--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html>
 <head>
 <style>
+
+.square{
+  position:absolute;
+  top:10px;
+  left:13px;
+    height:500px;
+    width:40px;
+    background-color: #FF0000
+}
+
 .rectangle{
   position:absolute;
   top:100px;
