--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 .square{
   position:absolute;
-  top:10px;
+  top:20px;
   left:13px;
     height:500px;
     width:40px;
@@ -14,10 +14,19 @@
 
 .rectangle{
   position:absolute;
-  top:100px;
+  top:230px;
   left:13px;
     height:40px;
     width: 200px;
+    background-color: #FF0000
+}
+
+.square2{
+  position:absolute;
+  top:20px;
+  left:213px;
+    height:500px;
+    width:40px;
     background-color: #FF0000
 }
 </style>
