--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 
 <body>
-  <a target="blank_" href="mysecondwebpage.html">Go to my second web page</a>
+  <a target="_blank" href="mysecondwebpage.html">Go to my second web page</a>
 </body>
 </html>
