--- a/index.html
+++ b/index.html
@@ -4,7 +4,5 @@
   <meta charset="utf-8">
 </head>
 
-<body>
-  <a target="_blank" href="mysecondwebpage.html">Go to my second web page</a>
-</body>
+<body><a target="_blank" href="mysecondwebpage.html">Go to my second web page</a></body>
 </html>
