--- a/mysecondwebpage.html
+++ b/mysecondwebpage.html
@@ -3,8 +3,5 @@
 <head>
   <meta charset="utf-8">
 </head>
-<body>
-  hello this is my body
-  <a target="_blank" href="index.html">Go to my index web page</a>
-</body>
+<body><a target="_blank" href="index.html">Go to my index web page</a></body>
 </html>
