got rid of target blank

--- a/mysecondwebpage.html
+++ b/mysecondwebpage.html
@@ -3,5 +3,7 @@
 <head>
   <meta charset="utf-8">
 </head>
-<body><a target="_blank" href="index.html">Go to my index web page</a></body>
+<body>
+  <a href="index.html">Go to my index web page</a>
+</body>
 </html>
