--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
   <meta charset="utf-8">
 </head>
 
-<body><a target="_blank" href="mysecondwebpage.html">Go to my second web page</a></body>
+<body>
+  <a href="mysecondwebpage.html">Go to my second web page</a>
+</body>
 </html>
