made the link to pic local?

--- a/mysecondwebpage.html
+++ b/mysecondwebpage.html
@@ -5,6 +5,6 @@
 </head>
 <body>
   <a href="index.html">Go to my index web page</a>
-  <p><a href="https://www.holbertonschool.com/"><img src="https://s3.amazonaws.com/intranet-projects-files/holberton-learning_web_programming/329/holberton-logo.png"></p>
+  <p><a href="https://www.holbertonschool.com/"><img src="holberton-loho.png"></p>
 </body>
 </html>
