--- a/mysecondwebpage.html
+++ b/mysecondwebpage.html
@@ -4,6 +4,6 @@
   <meta charset="utf-8">
 </head>
 <body>
-  <p><a href="https://www.holbertonschool.com/"><img src="holberton-logo.png"></p>
+  <p><a href="https://www.holbertonschool.com/"><img src="holberton-logo.png"></a></p>
 </body>
 </html>
