--- a/mysecondwebpage.html
+++ b/mysecondwebpage.html
@@ -5,5 +5,6 @@
 </head>
 <body>
   <p><a href="https://www.holbertonschool.com/"><img src="holberton-logo.png"></a></p>
+  <div style="color:green">Green for the win!</div>
 </body>
 </html>
