--- a/mysecondwebpage.html
+++ b/mysecondwebpage.html
@@ -2,9 +2,11 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <p><a href="https://www.holbertonschool.com/"><img src="holberton-logo.png"></a></p>
   <div style="color:green">Green for the win!</div>
+  <div style="color:white" id="white_on_red">White writing on a red background</div>
 </body>
 </html>
