--- a/mysecondwebpage.html
+++ b/mysecondwebpage.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="utf-8">
   <link href="style.css" rel="stylesheet" type="text/css">
+  <title>My Second Web Page</title>
 </head>
 <body>
   <p><a href="https://www.holbertonschool.com/"><img src="holberton-logo.png"></a></p>
   <div style="color:green">Green for the win!</div>
-  <div style="color:white" id="white_on_red">White writing on a red background</div>
+  <div style="color:white" id="white_on_red">White writing on a red background.</div>
 </body>
 </html>
