--- a/mysecondwebpage.html
+++ b/mysecondwebpage.html
@@ -9,6 +9,6 @@
   <p><a href="https://www.holbertonschool.com/"><img src="holberton-logo.png"></a></p>
   <div style="color:green">Green for the win!</div>
   <div style="color:white" id="white_on_red">White writing on a red background.</div>
-  <div style="color:black" id="going_to_the_right" class="right">I prefer to be aside.</div>
+  <div style="color:black" id="going_to_the_right">I prefer to be aside.</div>
 </body>
 </html>
