--- a/100-inline_styling.html
+++ b/100-inline_styling.html
@@ -3,9 +3,16 @@
 <head>
 <title>My Inline Styling</title>
 </head>
+<header>
+<div style="background-color:red; height:70px; width:100%;"></div>
+</header>
 <body>
   this is the body with no margin and no padding
 </body>
-<header style="background-color:#FF0000">
+
+<footer>
+<div style="background-color:green; height:60px; width:100%;">Holberton</div>
+</footer>
+
 
 </html>
