--- a/100-inline_styling.html
+++ b/100-inline_styling.html
@@ -11,7 +11,7 @@
 </body>
 
 <footer>
-<div style="background-color:green; height:60px; width:100%;">Holberton</div>
+<div style="background-color:green; height:60px; width:100%;"><center>Holberton</center></div>
 </footer>
 
 
