--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 
 <body>
   <a href="mysecondwebpage.html">Go to my second web page</a>
+
+  <button><a href="https://www.andkon.com">This is a button link</a></button>
 </body>
 </html>
