--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
   <a href="mysecondwebpage.html">Go to my second web page</a>
 
-  <button><a href="https://www.andkon.com">This is a button link</a></button>
+  <button id="button"><a href="https://www.andkon.com">This is a button link</a></button>
 </body>
 </html>
