--- a/100-inline_styling.html
+++ b/100-inline_styling.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>My Inline Styling</title>
+<title>Learn Web Programming</title>
 </head>
 <header>
-<div style="background-color:red; height:70px; width:100%;"></div>
+<div style="background-color:#FF0000; height:70px; width:100%;"></div>
 </header>
 <body>
   this is the body with no margin and no padding
 </body>
 
 <footer>
-<div style="background-color:green; height:60px; width:100%;"><center>Holberton</center></div>
+<div style="background-color:#00FF00; height:60px; width:100%;"><center>Holberton</center></div>
 </footer>
 
 
