--- a/100-inline_styling.html
+++ b/100-inline_styling.html
@@ -6,7 +6,7 @@
 <header>
 <div style="background-color:#FF0000; height:70px; width:100%;"></div>
 </header>
-<body>
+<body style="padding:100px;">
   this is the body with no margin and no padding
 </body>
 
