--- a/100-inline_styling.html
+++ b/100-inline_styling.html
@@ -7,7 +7,7 @@
 <div style="background-color:#FF0000; height:70px; width:100%;"></div>
 </header>
 <body style="padding:100px;">
-  this is the body with no margin and no padding
+  this is the body with no margin and 100px padding
 </body>
 
 <footer>
