--- a/100-inline_styling.html
+++ b/100-inline_styling.html
@@ -11,7 +11,7 @@
 </body>
 
 <footer>
-<div style="background-color:#00FF00; height:60px; width:100%; margin-top:100%; line-height: 60px;"><center>Holberton</center></div>
+<div style="background-color:#00FF00; height:60px; width:100%; margin-top:100%; line-height: 50%;"><center>Holberton</center></div>
 </footer>
 
 
