--- a/2-second_web_page_and_CSS/101-footer_always_to_the_bottom.html
+++ b/2-second_web_page_and_CSS/101-footer_always_to_the_bottom.html
@@ -29,6 +29,7 @@ body{
   THIS IS MY BODY that should be centered
 </body>
 <footer>
-THIS IS THE FOOTER, HOW STICKY IS IT
+  <div style="background-color:#FF0000; width:100%; margin-top:100%;">THIS IS THE FOOTER, HOW STICKY IS IT</div>
+
 </footer>
 </html>
