added lorem ipsum

--- a/2-second_web_page_and_CSS/101-footer_always_to_the_bottom.html
+++ b/2-second_web_page_and_CSS/101-footer_always_to_the_bottom.html
@@ -26,7 +26,7 @@ body{
   this font should be grey
 </h1>
 <body>
-  THIS IS MY BODY that should be centered
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 </body>
 <footer>
   <div style="background-color:#FF0000; width:100%; margin-top:100%;">THIS IS THE FOOTER, HOW STICKY IS IT</div>
