--- a/2-second_web_page_and_CSS/101-footer_always_to_the_bottom.html
+++ b/2-second_web_page_and_CSS/101-footer_always_to_the_bottom.html
@@ -57,7 +57,7 @@ Amet venenatis urna cursus eget nunc scelerisque viverra mauris in. Sit amet vol
 Sed pulvinar proin gravida hendrerit. Luctus accumsan tortor posuere ac ut. Turpis cursus in hac habitasse platea. Curabitur gravida arcu ac tortor dignissim convallis aenean. Euismod nisi porta lorem mollis aliquam. At auctor urna nunc id cursus metus aliquam. Cras tincidunt lobortis feugiat vivamus at augue eget arcu dictum. Blandit aliquam etiam erat velit scelerisque in. Fringilla phasellus faucibus scelerisque eleifend donec. Purus semper eget duis at. Diam ut venenatis tellus in metus vulputate eu scelerisque. Ullamcorper morbi tincidunt ornare massa eget egestas purus. Quis lectus nulla at volutpat diam ut venenatis tellus. Ligula ullamcorper malesuada proin libero nunc consequat. Erat imperdiet sed euismod nisi.
 </body>
 <footer>
-  <div style="background-color:#FF0000; width:100%; margin-top:100%;">THIS IS THE FOOTER, HOW STICKY IS IT</div>
+  <div style="background-color:#FF0000; width:100%; ">THIS IS THE FOOTER, HOW STICKY IS IT</div>
 
 </footer>
 </html>
