--- a/2-second_web_page_and_CSS/101-footer_always_to_the_bottom.html
+++ b/2-second_web_page_and_CSS/101-footer_always_to_the_bottom.html
@@ -15,7 +15,7 @@ body{
 .footer{
   position: sticky;
   left:0;
-  bottom:200;
+  bottom:0;
   width:100%;
   background-color: #FF0000;
   text-align: center;
@@ -43,7 +43,7 @@ Sit amet consectetur adipiscing elit ut aliquam. Vitae sapien pellentesque habit
 Elit sed vulputate mi sit amet. Laoreet id donec ultrices tincidunt. Facilisi cras fermentum odio eu feugiat. Tristique nulla aliquet enim tortor at. Molestie at elementum eu facilisis sed. Neque gravida in fermentum et sollicitudin. Integer enim neque volutpat ac tincidunt vitae semper. At consectetur lorem donec massa sapien faucibus. In pellentesque massa placerat duis. Ultricies lacus sed turpis tincidunt id aliquet risus feugiat. In fermentum posuere urna nec tincidunt praesent semper feugiat nibh. Consequat nisl vel pretium lectus quam id leo. Dolor sit amet consectetur adipiscing elit duis tristique sollicitudin nibh. Pellentesque nec nam aliquam sem. Nunc lobortis mattis aliquam faucibus purus in massa tempor nec. Eget nulla facilisi etiam dignissim diam quis enim. Sed nisi lacus sed viverra. Maecenas pharetra convallis posuere morbi.
 </body>
 <footer>
-  <div style="background-color:#FF0000; width:100%; ">THIS IS THE FOOTER, HOW STICKY IS IT</div>
+  <div class="footer">THIS IS THE FOOTER, HOW STICKY IS IT</div>
 
 </footer>
 </html>
