--- a/2-second_web_page_and_CSS/101-footer_always_to_the_bottom.html
+++ b/2-second_web_page_and_CSS/101-footer_always_to_the_bottom.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
-<html>
-<header>
+<html lan="en-US">
+<head>
 <meta charset="utf-8">
 <style>
 h1{
   color:grey;
+  text-align: center;
 }
 
 body{
-  width:320px;
+  max-width: 640px;
   text-align: center;
+  margin: 0 auto;
 }
 
 .footer{
   position: sticky;
+  height: 60px;
+  line-height: 60px;
   left:0;
   bottom:0;
   width:100%;
@@ -21,7 +25,7 @@ body{
   text-align: center;
 }
 </style>
-</header>
+</head>
 <h1>
   this font should be grey
 </h1>
