--- a/2-second_web_page_and_CSS/101-footer_always_to_the_bottom.html
+++ b/2-second_web_page_and_CSS/101-footer_always_to_the_bottom.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+
+<!-- IT WORKS LETS GO -->
 <html lan="en-US">
 <head>
 <meta charset="utf-8">
@@ -15,21 +17,35 @@ body{
 }
 
 .footer{
-  position: sticky;
-  height: 60px;
-  line-height: 60px;
+  position: fixed;
+  height: 2.5rem;
+  line-height: 40px;
+  margin-top: 100px;
   left:0;
   bottom:0;
   width:100%;
   background-color: #FF0000;
   text-align: center;
 }
+
+#page-container{
+  position: relative;
+  min-height: 100vh;
+}
+
+#content-wrap{
+  padding-bottom: 2.5rem;
+}
+
+
 </style>
 </head>
 <h1>
   this font should be grey
 </h1>
 <body>
+  <div id="page-container">
+    <div id="content-wrap">
   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Imperdiet dui accumsan sit amet nulla facilisi. Posuere sollicitudin aliquam ultrices sagittis orci a scelerisque purus. Etiam erat velit scelerisque in dictum non. Commodo ullamcorper a lacus vestibulum sed arcu non. Vitae et leo duis ut diam quam. Scelerisque eleifend donec pretium vulputate. Vel eros donec ac odio. At varius vel pharetra vel turpis nunc eget. Vulputate dignissim suspendisse in est. Ac turpis egestas integer eget aliquet nibh. Quam nulla porttitor massa id neque. Nisi est sit amet facilisis magna etiam tempor orci. Tempus iaculis urna id volutpat lacus laoreet.
 
 Placerat vestibulum lectus mauris ultrices eros in. Id aliquet risus feugiat in ante metus dictum. Duis convallis convallis tellus id interdum velit laoreet id. Malesuada fames ac turpis egestas sed tempus urna. In nulla posuere sollicitudin aliquam ultrices sagittis orci a scelerisque. Eu consequat ac felis donec et odio. Pellentesque habitant morbi tristique senectus et. Quis commodo odio aenean sed adipiscing diam donec adipiscing. Ut ornare lectus sit amet est placerat in egestas erat. Nibh nisl condimentum id venenatis. Ut tellus elementum sagittis vitae et leo duis ut diam. Imperdiet nulla malesuada pellentesque elit eget gravida cum sociis. Non sodales neque sodales ut etiam sit amet nisl. Id diam maecenas ultricies mi eget mauris pharetra et ultrices. Id semper risus in hendrerit gravida rutrum quisque non tellus. Fusce id velit ut tortor. Vitae ultricies leo integer malesuada nunc vel.
@@ -45,7 +61,10 @@ Mattis ullamcorper velit sed ullamcorper morbi tincidunt. Erat pellentesque adip
 Sit amet consectetur adipiscing elit ut aliquam. Vitae sapien pellentesque habitant morbi tristique. Nunc consequat interdum varius sit amet. Risus quis varius quam quisque id diam vel. Sed viverra ipsum nunc aliquet bibendum enim. Tellus id interdum velit laoreet id donec ultrices tincidunt. Tortor condimentum lacinia quis vel eros. Sit amet justo donec enim diam vulputate. In tellus integer feugiat scelerisque varius. Turpis egestas sed tempus urna et. Suspendisse in est ante in nibh. Pretium vulputate sapien nec sagittis aliquam malesuada bibendum arcu vitae.
 
 Elit sed vulputate mi sit amet. Laoreet id donec ultrices tincidunt. Facilisi cras fermentum odio eu feugiat. Tristique nulla aliquet enim tortor at. Molestie at elementum eu facilisis sed. Neque gravida in fermentum et sollicitudin. Integer enim neque volutpat ac tincidunt vitae semper. At consectetur lorem donec massa sapien faucibus. In pellentesque massa placerat duis. Ultricies lacus sed turpis tincidunt id aliquet risus feugiat. In fermentum posuere urna nec tincidunt praesent semper feugiat nibh. Consequat nisl vel pretium lectus quam id leo. Dolor sit amet consectetur adipiscing elit duis tristique sollicitudin nibh. Pellentesque nec nam aliquam sem. Nunc lobortis mattis aliquam faucibus purus in massa tempor nec. Eget nulla facilisi etiam dignissim diam quis enim. Sed nisi lacus sed viverra. Maecenas pharetra convallis posuere morbi.
-</body>
-<div class="footer">THIS IS THE FOOTER, HOW STICKY IS IT</div>
 
+</div>
+<div class="footer">THIS IS THE FOOTER, HOW STICKY IS IT</div>
+</div>
+
+</body>
 </html>
