--- a/2-second_web_page_and_CSS/102-H_like_holberton.html
+++ b/2-second_web_page_and_CSS/102-H_like_holberton.html
@@ -10,7 +10,7 @@
   </style>
 </head>
 
-<body>
-  <div id="background">this is my div</div>
+<body id="background">
+  this is the body
 </body>
 </html>
