--- a/2-second_web_page_and_CSS/102-H_like_holberton.html
+++ b/2-second_web_page_and_CSS/102-H_like_holberton.html
@@ -3,7 +3,7 @@
 <head>
   <style>
   #background{
-    background-color: red;
+    background-color: grey;
     width:200px;
     height:300px;
   }
