--- a/2-second_web_page_and_CSS/102-H_like_holberton.html
+++ b/2-second_web_page_and_CSS/102-H_like_holberton.html
@@ -4,8 +4,8 @@
   <style>
   #background{
     background-color: grey;
-    width:200px;
-    height:300px;
+    max-width:200px;
+    max-height:300px;
   }
   </style>
 </head>
