--- a/2-second_web_page_and_CSS/102-H_like_holberton.html
+++ b/2-second_web_page_and_CSS/102-H_like_holberton.html
@@ -6,11 +6,22 @@
     background-color: grey;
     max-width:200px;
     max-height:300px;
+
+
   }
+
+ #flex_containter{
+   display: flex;
+   flex-wrap: wrap;
+   height: 400px;
+   width: 300px;
+ }
+
   </style>
 </head>
 
 <body id="background">
   this is the body
+  <div id="flex_containter"></div>
 </body>
 </html>
