--- a/2-second_web_page_and_CSS/102-H_like_holberton.html
+++ b/2-second_web_page_and_CSS/102-H_like_holberton.html
@@ -22,6 +22,6 @@
 
 <body id="background">
   this is the body
-  <div id="flex_containter"></div>
+  <div id="flex_containter">this is my div</div>
 </body>
 </html>
