making the h lets go

--- a/2-second_web_page_and_CSS/102-H_like_holberton.html
+++ b/2-second_web_page_and_CSS/102-H_like_holberton.html
@@ -2,26 +2,25 @@
 <html>
 <head>
   <style>
-  #background{
-    background-color: grey;
-    max-width:200px;
-    max-height:300px;
-
-
+  .left_bit{
+    position: absolute;
+    background-color: #FF0000;
+    height: 400px;
+    width: 100px;
   }
+ .mid_bit{
+   position: absolute;
+   background-color: grey;
+   height:170px;
+   width: 100px;
 
- #flex_containter{
-   display: flex;
-   flex-wrap: wrap;
-   height: 400px;
-   width: 300px;
  }
+
 
   </style>
 </head>
 
-<body id="background">
-  this is the body
-  <div id="flex_containter">this is my div</div>
+<body >
+
 </body>
 </html>
