--- a/2-second_web_page_and_CSS/102-H_like_holberton.html
+++ b/2-second_web_page_and_CSS/102-H_like_holberton.html
@@ -8,7 +8,7 @@
     height: 400px;
     width: 100px;
   }
- .mid_bit{
+ .mid_top_bit{
    position: absolute;
    background-color: grey;
    height:170px;
@@ -21,6 +21,7 @@
 </head>
 
 <body >
-
+<div class="left_bit"></div>
+<div class="mid_top_bit"></div>
 </body>
 </html>
