--- a/2-second_web_page_and_CSS/102-H_like_holberton.html
+++ b/2-second_web_page_and_CSS/102-H_like_holberton.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--WE GOT THE H FOR THE BOYS-->
 <html>
 <head>
   <style>
@@ -13,7 +14,36 @@
    background-color: grey;
    height:170px;
    width: 100px;
-   left:100px;
+   left:108px;
+
+ }
+
+ .mid_mid_bit{
+   position: absolute;
+   background-color: red;
+   height:60px;
+   width: 180px;
+   left:108px;
+   top: 170px;
+
+ }
+
+ .mid_bot_bit{
+   position: absolute;
+   background-color: grey;
+   height:178px;
+   width: 100px;
+   left:108px;
+   top: 230px;
+
+ }
+
+ .right_bit{
+   position: absolute;
+   background-color: #FF0000;
+   height: 400px;
+   width: 100px;
+   left:200px;
 
  }
 
@@ -24,5 +54,8 @@
 <body >
 <div class="left_bit"></div>
 <div class="mid_top_bit"></div>
+<div class="mid_mid_bit"></div>
+<div class="mid_bot_bit"></div>
+<div class="right_bit"></div>
 </body>
 </html>
