--- a/2-second_web_page_and_CSS/102-H_like_holberton.html
+++ b/2-second_web_page_and_CSS/102-H_like_holberton.html
@@ -2,6 +2,7 @@
 <!--WE GOT THE H FOR THE BOYS-->
 <html>
 <head>
+  <title>H like Holberton</title>
   <style>
   .left_bit{
     position: absolute;
