--- a/bootstrap.html
+++ b/bootstrap.html
@@ -8,8 +8,10 @@
     <center>Hello World</center>
   </div>
 
-  <div class="containter">
-    this is my containter
+  <div class="row" style="background-color:#FF00FF;height:200px;">
+    <div class="col">
+      Bingo
+    </div>
   </div>
 
 
