--- a/bootstrap.html
+++ b/bootstrap.html
@@ -4,11 +4,11 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-  <div class="jumbotron">
+  <div class="jumbotron" style="background-color:red;height:300px;">
     <center>Hello World</center>
   </div>
 
-  <div class="row" style="background-color:#FF00FF;height:200px;">
+  <div class="row" style="background-color:#FF00FF;height:500px;">
     <div class="col">
       Bingo
     </div>
