--- a/bootstrap.html
+++ b/bootstrap.html
@@ -8,8 +8,8 @@
     <center>Hello World</center>
   </div>
 
-  <div class="row" style="background-color:#FF00FF;height:500px;">
-    <div class="col">
+  <div class="row" style="background-color:yellow;height:500px;">
+    <div class="col" style="background-color:blue; height:200px;">
       Bingo
     </div>
   </div>
