--- a/bootstrap.html
+++ b/bootstrap.html
@@ -2,14 +2,15 @@
 <html>
 <head>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </head>
 <body>
-  <div class="jumbotron" style="background-color:red;height:300px;">
+  <div class="jumbotron">
     <center>Hello World</center>
   </div>
 
-  <div class="row" style="background-color:yellow;height:500px;">
-    <div class="col" style="background-color:blue; height:200px;">
+  <div class="row" style="background-color:#0000FF;height:200px;">
+    <div class="col">
       Bingo
     </div>
   </div>
