--- a/layout.html
+++ b/layout.html
@@ -5,16 +5,16 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </head>
 <body>
-  <div class="container">
+  <div class="container" style="border:solid;">
     <div class="jumbotron">
       <center>Hello</center>
     </div>
 
 
-  <div class="row" style="background-color:#0000FF;height:300px;">
-    <div class="col" style="background-color: #0000FF; max-width:200px;">First col</div>
-    <div class="col" style="background-color: #000000; max-width:200px;">Second col</div>
-    <div class="col" style="background-color: #FF0000; max-width:200px;">Third col</div>
+  <div class="row" style="height:300px; max-width:100%;">
+    <div class="col" style="background-color: #0000FF; max-width:inherit;">First col</div>
+    <div class="col" style="background-color: #FFFFFF; max-width:inherit;">Second col</div>
+    <div class="col" style="background-color: #FF0000; max-width:inherit;">Third col</div>
 
   </div> <!--row div-->
 </div> <!--container div-->
