made the twitter glyphicon page
made a folder for this advanced task

--- a/layout.html
+++ b/layout.html
@@ -5,18 +5,22 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </head>
 <body>
-  <div class="container" style="border:solid;">
-    <div class="jumbotron">
+
+  <div class="container">
+    <div class="row" style="border:solid; min-height:60px;">First Row</div>
+    <div class="jumbotron" style="margin-top:80px;">
       <center>Hello</center>
     </div>
 
 
-  <div class="row" style="height:300px; max-width:100%;">
-    <div class="col" style="background-color: #0000FF; max-width:inherit;">First col</div>
-    <div class="col" style="background-color: #FFFFFF; max-width:inherit;">Second col</div>
-    <div class="col" style="background-color: #FF0000; max-width:inherit;">Third col</div>
+  <div class="row" style="height:300px;">
+    <div class="col-sm-4" style="background-color: #0000FF; max-width:inherit;">First col</div>
+    <div class="col-sm-4" style="background-color: #FFFFFF; max-width:inherit;">Second col</div>
+    <div class="col-sm-4" style="background-color: #FF0000; max-width:inherit;">Third col</div>
 
   </div> <!--row div-->
+
+  <div class="row" style="border:solid; min-height:60px; margin-top:80px;">Third Row</div>
 </div> <!--container div-->
 
 
