--- a/3-twitter_bootstrap/101-glyphicons.html
+++ b/3-twitter_bootstrap/101-glyphicons.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
+<!--STRICTLY BOOTSTRAP 3-->
 <html lang="en-US">
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+
 </head>
 <body>
 <p style="font-size:30px;">
   <span class="glyphicon glyphicon-thumbs-up"></span>
-  I love HTML
-
-
-
+  I love HTML.
+  <span class="glyphicon glyphicon-heart-empty"></span>
 
 
 </p>
