--- a/embed.html
+++ b/embed.html
@@ -9,13 +9,29 @@
 </head>
 <body>
   <center>
-  <h1>Tracks for the Boys</h1>
+  <font face="bookman"><h1>How to Spend Your Time</h1></font>
   <div class="jumbotron">
+    <h2>Favorite Hot Ones</h2>
 
+    <h3>Gordon Ramsay</h3>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/U9DyHthJ6LA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <h3>Shaq<h3>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/_sZH-psg9yE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <h3>Kevin Hart</h3>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/GTW8IplsKmM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <h2>Tracks for the Boys</h2>
     <iframe width="90%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/497893788&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
     <iframe width="90%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/603636444&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
     <iframe width="90%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/395686416&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+
+
+
+
+
+
   </div>
+
 
 </center>
 </body>
