share button and padding

--- a/embed.html
+++ b/embed.html
@@ -6,16 +6,27 @@
   <meta name="author" content="Stone Werner">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <title>EMBED TIME</title>
+  <style>
+    h2{
+      padding:30px;
+    }
+    h3{
+      padding:15px;
+    }
+  </style>
 </head>
 <body>
   <center>
   <font face="bookman"><h1>How to Spend Your Time</h1></font>
   <div class="jumbotron">
+
     <h2>Favorite Hot Ones</h2>
 
     <h3>Gordon Ramsay</h3>
+    <p>share if you feel<a href="https://twitter.com/share?url=https://www.youtube.com/watch?v=U9DyHthJ6LA;hashtags=HOTONES" target="_blank"> <img style="max-height:40px; max-width:40px;" src="https://www.pngfind.com/pngs/m/78-782173_share-png-share-button-icon-png-transparent-png.png" alt="Twitter" /> </a></p>
+
     <iframe width="560" height="315" src="https://www.youtube.com/embed/U9DyHthJ6LA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <h3>Shaq<h3>
+    <h3>Shaq</h3>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/_sZH-psg9yE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <h3>Kevin Hart</h3>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/GTW8IplsKmM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
