made the pit html and css

--- a/my_website.html
+++ b/my_website.html
@@ -5,12 +5,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Stone Werner">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"><!--USING 3.4.0 FOR THE GLYPHICONS-->
-  <link> <!--LINK CSS PAGE HERE-->
-  <title>SICK ASS PAGE</title>
+  <link rel="stylesheet" href="my_website.css">
+  <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
+  <title>The Pit</title>
 
 </head>
 <body>
-  <span class="glyphicon glyphicon-thumbs-up"></span>
+  <center>
+    <div class="container">
+      <div class="jumbotron">
+        <h1>The Pit: The Place for all things Surfing</h1>
 
-</body<
+      </div> <!--jumbotron div-->
+
+
+
+    </div> <!--container div-->
+    <blockquote class="embedly-card"><h3><a target="_blank" href="https://www.worldsurfleague.com/athletes/tour/mct?year=2019">Men's Championship Tour Rankings</a></h3></blockquote>
+    <blockquote class="embedly-card"><h3><a target="_blank" href="https://www.worldsurfleague.com/athletes/tour/wct?year=2019">Women's Championship Tour Rankings</a></h3></blockquote>
+
+    <h2>JOB Goes Mental in Tahiti</h2>
+    <img id="JOB_FIRE"  alt="Jamie O'Brien in the barrel, on fire" src="https://image.redbull.com/rbcom/010/2015-07-22/1331736706840_7/0010/1/1500/1000/1/jamie-o-brien-surfs-teahupo-o-on-fire.jpg">
+    <p>In 2015, Jamie O'Brien surfed the world's heaviest wave while on fire.</p>
+
+
+  </center>
+
+
+</body>
 </html>
+
+<!--<span class="glyphicon glyphicon-thumbs-up"></span>-->
